Adjust the link styles, avoid sticky hovering on mobile

--- a/style.scss
+++ b/style.scss
@@ -179,11 +179,19 @@ nav {
       flex: 0 1 auto;
       color: $color-primary;
       background-color: color.adjust(white, $alpha: -0.6);
-      &:hover:not(.current) {
-        color: $color-secondary;
+      @media (hover: hover) {
+        &:hover:not(.current) {
+          color: color.adjust($color-secondary, $lightness: -10%);
+          background-color: color.adjust(white, $alpha: -0.3);
+        }
       }
-      &:hover, & a.current, & a:focus {
+      & a:focus {
         background-color: color.adjust(white, $alpha: -0.3);
+        color: color.adjust($color-secondary, $lightness: -10%);
+      }
+      & a:active {
+        background-color: color.adjust(white, $alpha: -0.15);
+        color: color.adjust($color-secondary);
       }
       & a.current {
         background-color: color.adjust(white, $alpha: -0.15);
@@ -194,6 +202,9 @@ nav {
       }
     }
     a {
+      &:hover {
+        color: inherit;
+      }
       display: block;
       padding: 0.5em 1em;
       text-decoration: none;
